@@ -1,3 +1,7 @@
+2004-06-01  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/diagram/association.py: added hollow diamond end for shared
+
 2004-05-27  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	Applied patches from wrobell@pld-linux.org
